--- a/LaTex/BachelorThesis/arbeit-vorlage.tex
+++ b/LaTex/BachelorThesis/arbeit-vorlage.tex
@@ -68,7 +68,7 @@ Da es eine Vielzahl an iterativen Lösungsverfahren gibt, werden wir uns hier au
 
 
 \chapter{Diskretisierung der Poisson-Gleichung im $\mathbb{R}^{2}$}\label{c.Diskretisierte Poisson-Gleichung}
-Um nun die Poisson-Gleichung zu diskretisieren, werden wir diese zunächst definieren. Außerdem werden wir die Methode der finitien Differenzen einführen, um dann ein Gleichungssystem der Form $\mat{A}x = b$ zu erhalten.
+Um die Poisson-Gleichung zu diskretisieren, werden wir diese zunächst definieren. Außerdem werden wir die Methode der finitien Differenzen einführen, um dann ein Gleichungssystem der Form $\mat{A}x = f$ zu erhalten.
 
 \section{Definition (Poisson-Gleichung)}\label{s.Poisson-Gleichung}
 
@@ -92,11 +92,11 @@ Dabei bezeichnet $\Delta := \sum\limits_{k=1}^{n} \frac {\partial^{2}} {\partial
 \item Man kann zeigen, dass, wenn $\partial \Omega$ aus glatten Liniensegmenten (z.B. Geraden) zusammengesetzt ist und $f(x,y) \in C^{1}(\Omega), g \in C(\partial \Omega)$ gilt, die Gleichungen (2.1),(2.2) bzw. (2.3),(2.4) eine eindeutige Lösung besitzen (Dahmen,Reusken Seite 463).
 \end{itemize}
 
-Um diese (elliptische) partielle Differentialgleichung nun in $\Omega$ zu diskretisieren, bedarf es der Hilfe der Finiten Differenzen Methode:
+Um diese (elliptische) partielle Differentialgleichung nun in $\Omega$ zu diskretisieren, bedarf es der Hilfe der Finiten Differenzen Methode.
 
 \section{Finite Differenzen-Methode für die Poisson-Gleichung}\label{s.Finite Differenzen}
 
-\subsection{(Zentraler) Differenzenquotient zweiter Ordnung}
+\subsection{(Zentraler) Differenzenquotient zweiter Ordnung}\label{ss.Differenzenquotient zweiter Ordnung}
 
 Wir betrachten ein $(x,y) \in \Omega$ beliebig. Dann gilt für $h > 0$ mit der Taylorformel
 \begin{eqnarray}
@@ -105,36 +105,44 @@ u(x-h,y) &=& u(x,y) - h \partial_{x} u(x,y) + \frac {h^{2}} {2!} \partial_{xx} u
 \end{eqnarray}
 Analog können wir diese Betrachtung für $u(x,y+h)$ und $u(x,y-h)$ machen. \\
 Löst man nun (2.5) und (2.6) jeweils nach $\partial_{xx} u(x,y)$ auf und addiert die zwei Gleichungen, so erhält man:
+
 \begin{equation}
 \partial_{xx} u(x,y) + O(h^{2}) = \frac {u(x-h,y) - 2u(x,y) + u(x+h,y)} {h^{2}}
 \end{equation}
+
 Ebenso lösen wir nach $\partial_{yy} u(x,y)$ auf und erhalten analog:
 \begin{equation}
 \partial_{yy} u(x,y) + O(h^{2}) = \frac {u(x,y-h) - 2u(x,y) + u(x,y+h)} {h^{2}}
 \end{equation}
-Diese Näherungen nennt man auch (zentralen) Differenzenquotienten der zweiten Ableitung, wobei $O(h^{2})$ ein Term zweiter Ordnung ist und später vernachlässigt wird/werden kann.
+
+Wobei hier $\partial_{xx} u(x,y) = \frac {\partial^{2} u(x,y)} {\partial x^{2}}$ und $\partial_{yy} u(x,y) = \frac {\partial^{2} u(x,y)} {\partial y^{2}}$ gemeint ist.
+Diese Näherungen nennt man auch (zentralen) Differenzenquotienten der zweiten Ableitung. $O(h^{2})$ ist ein Term zweiter Ordnung und wird vernachlässigt.
+
 Somit erhalten wir für $\Delta u(x,y)$ die Näherung
 \begin{eqnarray}
-\Delta u(x,y) &=& \frac {\partial^{2} u(x,y)} {\partial x^{2}} + \frac {\partial^{2} u(x,y)} {\partial y^{2}} \notag \\
+\Delta u(x,y) &=& \frac {\partial^{2} u(x,y)} {\partial x^{2}} + \frac {\partial^{2} u(x,y)} {\partial y^{2}} = \partial_{xx} u(x,y) + \partial_{yy} u(x,y) \notag \\
 &\approx& \frac {u(x-h,y) + u(x+h,y) - 4u(x,y) + u(x,y-h) + u(x,y+h)} {h^{2}}
 \end{eqnarray}
 
-\subsection{Diskretisierung von $\Omega$}
+\subsection{Diskretisierung von $\Omega$}\label{ss.Diskretisierung}
 
 Mit einem zweidimensionalen Gitter, der Gitterweite $h$, wobei $h \in \mathbb{Q}$ mit $h = \frac {1} {n}$ und $n \in \mathbb{N}_{>1}$, wird nun das Gebiet $\Omega$ diskretisiert. Die Zahl $(n-1)$ gibt uns an, wie viele Gitterpunkte es jeweils in x- bzw. y-Richtung gibt.\\
 
-Für $i = 1,...,(n-1)$ und $j = 1,...,(n-1)$ kann man dann $u(x,y)$ auch in der Form $u(x_{i},y_{j})$ schreiben. Dabei gilt dann:
+Für $i = 1,...,(n-1)$ und $j = 1,...,(n-1)$ kann man dann $u(x,y)$ auch in der Form $u(x_{i},y_{j})$ schreiben:
 \begin{equation}
 u(x_{i},y_{j}) := u(ih,jh)
 \end{equation}
-und für $\Omega$ lässt sich ein $\Omega_{h}$ einführen, so dass:
+
+und $\Omega$ fassen wir als $\Omega_{h}$ auf, so dass:
 \begin{equation}
 \Omega_{h} := \{u(ih, jh) | 1 \le i,j \le (n-1)\}
 \end{equation}
-Betrachten wir nun noch den Rand von $\Omega$ bzw. $\Omega_{h}$, dann gilt:
+
+Betrachten wir nun noch den Rand von $\Omega_{h}$:
 \begin{equation}
 \overline \Omega_{h} := \{u(ih, jh) | 0 \le i,j \le n\}
 \end{equation}
+
 Mit der Formel (2.9) ergibt sich nun für $\Delta u(x,y)$ die diskretisierte Form:
 \begin{eqnarray}
 \Delta_{h} u(x,y) &:=& \frac {u(x-h,y) + u(x+h,y) - 4u(x,y) + u(x,y-h) + u(x,y+h)} {h^{2}} \notag \\
@@ -157,7 +165,7 @@ u(x-h,y)
 \end{eqnarray}
 Diese Approximation wird auch 5-Punkt-Differenzenstern genannt, siehe dazu Abbildung (2.1).
 
-\bild{diffStar}{8cm}{5-Punkt-Differenzenstern im Gitter}{5-Punkt-Differenzenstern im Gitter}
+\bild{diffStar}{8cm}{5-Punkt-Differenzenstern im Gitter}{5-Punkt-Differenzenstern im Gitter}\label{img.5-Point-Star}
 
 \bild{grid}{8cm}{(Lexikographische) Nummerierung von $\Omega = (0,1)^{2}$ mit $n=5$}{Gitter}\label{img.gridWithNumbers}
 
@@ -172,7 +180,8 @@ A_{1} & -Id \\
  & & -Id & A_{n}
 \end{pmatrix}
 \end{equation}
-Wobei $\mat{Id} \in \mathbb{R}^{(n-1) \times (n-1)}$ die Identität - also die Einheitsmatrix - ist und für alle $i = 0,..,n$ gilt:
+wobei $\mat{Id} \in \mathbb{R}^{(n-1) \times (n-1)}$ die Identität meint und für alle $i = 0,..,n$ gilt:
+
 \begin{equation}
 A_{i} = 
 \begin{pmatrix}
@@ -182,21 +191,21 @@ A_{i} =
  & & -1 & 4
 \end{pmatrix}
 \end{equation}
-mit $A_{i} \in \mathbb{R}^{(n-1) \times (n-1)}$ symmetrisch, positiv definit.
+mit $A_{i} \in \mathbb{R}^{(n-1) \times (n-1)}$ symmetrisch, positiv definit (s.p.d).
 
-Um nun auf ein lineares Gleichungssystem der Form $\mat{A}u = b$ zu kommen, muss natürlich noch die rechte Seite, also das $b$ aufgestellt werden. Aus der Form der Matrix ist erkennbar, dass nicht alle Punkt aus $\overline \Omega$ in $\mat{A}$ auftauchen. Das liegt daran, dass die Randpunkte die aus der Dirichlet-Randbedingung resultieren ($u(x,y) = f(x,y)$) bereits bekannt sind und somit nicht genähert werden müssen. Jedoch muss zu jeder Komponente in $b$, die einen Randpunkt als Nachbarn hat, dieser aufaddiert werden. Dies führt uns auf folgende rechte Seite:
+Um nun auf ein lineares Gleichungssystem der Form $\mat{A}u = f$ zu kommen, muss natürlich noch die rechte Seite, also das $f$ aufgestellt werden. Aus der Form der Matrix ist erkennbar, dass nicht alle Punkt aus $\overline \Omega$ in $\mat{A}$ auftauchen. Das liegt daran, dass die Randpunkte die aus der Dirichlet-Randbedingung resultieren ($u(x,y) = f(x,y)$) bereits bekannt sind und somit nicht genähert werden müssen. Jedoch muss zu jeder Komponente in $f$, die einen Randpunkt als Nachbarn hat, dieser aufaddiert werden. Dies führt uns auf folgende rechte Seite:
 
 \begin{equation}
-b = 
+f = 
 \begin{pmatrix}
-b_{1} \\ b_{2} \\ \vdots \\ b_{n-1}
+f_{1} \\ f_{2} \\ \vdots \\ f_{n-1}
 \end{pmatrix}
 \end{equation}
 
 wobei gilt
 
 \begin{equation}
-b_{1} = 
+f_{1} = 
 \begin{pmatrix}
 f(h,h) + h^{-2}(g(h,0)+g(0,h)) \\
 f(2h,h) + h^{-2}(g(2h,0)) \\
@@ -207,7 +216,7 @@ f(1-h,h) + h^{-2}(g(1-h,0)+g(0,1-h))
 \end{equation}
 
 \begin{equation}
-b_{j} = 
+f_{j} = 
 \begin{pmatrix}
 f(h,jh) + h^{-2}(g(0,jh)) \\
 f(2h,jh) \\
@@ -219,7 +228,7 @@ f(1-h,jh) + h^{-2}(g(1,jh))
 \end{equation}
 
 \begin{equation}
-b_{n-1} = 
+f_{n-1} = 
 \begin{pmatrix}
 f(h,1-h) + h^{-2}(g(h,1)+g(0,1-h)) \\
 f(2h,1-h) + h^{-2}(g(2h,1)) \\
@@ -229,85 +238,106 @@ f(1-h,1-h) + h^{-2}(g(1-h,1)+g(1,1-h))
 \end{pmatrix}
 \end{equation}
 
-Nun steht das lineare Gleichungssystem der Form $\mat{A}u = b$, wobei $\mat{A}$ und $b$ bekannt sind und $u$ der Lösungsvektor ist, der die partielle Differentialgleichung löst.
+Nun steht das lineare Gleichungssystem der Form $\mat{A}u = f$, wobei $\mat{A}$ und $f$ bekannt sind und $u$ der Lösungsvektor ist, der die Lösung der partielle Differentialgleichung enthält.
 
 \chapter{Iterative Lösungsvefahren für lineare Gleichungssysteme}\label{c.IterativeVerfahren}
 
-Gleichungssysteme, die partielle Differentialgleichungen lösen können sehr groß werden, da man das entsprechende Gitter sehr fein wählen will, um eine möglichst genaue Lösung zu erhalten. Aus diesem Grund sind direkte Verfahren, wie z.B. der Gauß-Algorithmus oder die LR-Zerlegung nicht geeignet. Ihr Rechenaufwand beläuft sich im Allgemeinen auf $\mathcal{O}(n^{3})$ und ist dadurch zu langsam und unstabil. Ein wesentlicher Bestandteil der numerischen Mathematik sind iterative Verfahren zu Lösung linearer Gleichungssysteme. Diese zeichnen sich meist durch eine schnelle Konvergenz und einen geringen Rechenaufwand aus. Wir wollen uns im folgenden dem Jacobi-Verfahren (Gesamtschrittverfahren), Gauß-Seidel-Verfahren (Einzelschrittverfahren) und dem CG-Verfahren (samt Vorkonditionierung) widmen.
+Gleichungssysteme, die partielle Differentialgleichungen lösen können sehr groß werden, da man das entsprechende Gitter sehr fein wählen will, um eine möglichst genaue Lösung zu erhalten. Aus diesem Grund sind direkte Verfahren, wie z.B. der Gauß-Algorithmus oder die LR-Zerlegung nicht geeignet. Ihr Rechenaufwand beläuft sich im Allgemeinen auf $\mathcal{O}(n^{3})$ und ist dadurch zu langsam. Fehler - durch Maschinengenauigkeit bedingt - werden außerdem in diesen Verfahren verstärkt. Darum müssen bessere Verfahren gewählt werden. \\
+Ein wesentlicher Bestandteil der numerischen Mathematik sind iterative Verfahren zu Lösung linearer Gleichungssysteme. Diese zeichnen sich meist durch eine schnelle Konvergenz und einen geringen Rechenaufwand aus. Wir wollen uns im folgenden dem Jacobi-Verfahren (Gesamtschrittverfahren), Gauß-Seidel-Verfahren (Einzelschrittverfahren), SOR-Verfahren (SOR = successive overrelaxation) und dem CG-Verfahren (ohne und mit Vorkonditionierung) widmen.
 
 \section{Das Jacobi-Verfahren (Gesamtschrittverfahren)}\label{s.Das Jacobi-Iterationsverfahren}
 
 Im folgenden betrachten wir das oben beschriebene Gitter mit $(N-1)$ Gitterpunkten in x- und y-Richtung und erhalten dadurch für die Dimension $n = (N-1) \cdot (N-1)$. \\
 
 
-\subsection{Das allgemeine Jacobi-Iterationsverfahren}
-Sei $\mat{A} \in \mathbb{R}^{n \times n}$ und $b,u \in \mathbb{R}^{n}$, wobei $u$ die Lösung des linearen Gleichungssystems $\mat{A}u = b$ ist. Dann lässt sich $\mat{A}$ wie folgt zerlegen:
+\subsection{Das allgemeine Jacobi-Iterationsverfahren}\label{ss.Allgemeines Jacobi-Verfahren}
+
+Sei $\mat{A} \in \mathbb{R}^{n \times n}$ und $f,u \in \mathbb{R}^{n}$, wobei $u$ die Lösung des linearen Gleichungssystems $\mat{A}u = f$ ist. Dann lässt sich $\mat{A}$ wie folgt zerlegen:
+
 \begin{equation}
 A = D - L - U
 \end{equation}
+
 Dabei sind $D,L,U \in \mathbb{R}^{n \times n}$, wobei $\mat{D}$ die Diagonalelemente von $\mat{A}$ enthält, $\mat{L}$ eine strikte untere und $\mat{U}$ eine strikte obere Dreiecksmatrix sind. \\
-Somit ergibt sich für $\mat{A}u = b$:
+Somit ergibt sich für $\mat{A}u = f$:
+
 \begin{equation}
-Au = b \Leftrightarrow (D-L-U)u = b \Leftrightarrow Du = (L+U)u + b
+Au = f \Leftrightarrow (D-L-U)u = f \Leftrightarrow Du = (L+U)u + f
 \end{equation}
+
 Ist nun $D$ nicht singulär, so gilt für das Jacobi-Verfahren folgende Iterationsvorschrift:
 \begin{equation}
-Du^{k+1} = (L+U)u^{k} + b \Leftrightarrow u^{k+1} = D^{-1}(L+U)u^{k} + D^{-1}b
+Du^{k+1} = (L+U)u^{k} + f \Leftrightarrow u^{k+1} = D^{-1}(L+U)u^{k} + D^{-1}f
 \end{equation}
+
 Mit der Iterationsmatrix $T := D^{-1}(L+U)$.
 Wobei dies in Komponentenschreibweise wie folgt aussieht: \\
 Mit einem Startvektor $u^{0} \in \mathbb{R}^{n}$ und $k=1,2,...$ berechne für $i=1,...,n$:
+
 \begin{equation}
-u^{k}_{i} = \frac {1} {a_{ii}} (b_{i} - \sum_{\substack{j = 1 \\ j \ne i}}^{n} a_{ij}u^{k-1}_{i})
+u^{k}_{i} = \frac {1} {a_{ii}} (f_{i} - \sum_{\substack{j = 1 \\ j \ne i}}^{n} a_{ij}u^{k-1}_{i})
 \end{equation}
+
 Offensichtlich wird jedes $u^{k}$ durch seinen Vorgänger berechnet. Der Rechenaufwand pro Iterationsschritt beträgt hier $\mathcal{O}(n^{2})$ und entspricht somit einer Matrix-Vektor-Multiplikation.
 
-\subsection{Das Jacobi-Iterationsverfahren für die Poisson-Gleichung}
+\subsection{Das Jacobi-Iterationsverfahren für die Poisson-Gleichung}\label{ss.Jacobi-Verfahren der Poisson Gleichung}
+
 Da die Matrix, die durch das diskretisierte Poisson-Problem aufgestellt wird, dünn besetzt ist, können wir den Rechenaufwand für dieses spezielle Problem auf $\mathcal{O}(n)$ pro Iterationsschritt verbessern. Dafür benötigen wir nochmals den 5-Punkt-Differenzenstern und die partielle Differentialgleichung:
+
 \begin{equation}
 \frac {u(x_{i-1},y_{j}) + u(x_{i+1},y_{j}) - 4u(x_{i},y_{j}) + u(x_{i},y_{j-1}) + u(x_{i},y_{j+1})} {h^{2}} = f(x,y)
 \end{equation}
-Löst man diese Gleichung nun nach $u(x_{i},y_{j})$ auf und geht jeden Gitterpunkt Schritt-für-Schritt durch, so erhält man folgende Iterationsvorschrift für das Jacobi-Verfahren: \\
+
+Löst man diese Gleichung nun nach $u(x_{i},y_{j})$ auf und führt dies für alle $u(x_{i},y_{i})$ durch, so erhält man folgende Iterationsvorschrift für das Jacobi-Verfahren: \\
+
 Für $k = 1,2,...$ berechne mit Startvektor $u^{0} \in \mathbb{R}^{n}$ \\
-Für $i,j = 1,...,N-1$
+Für $i = 1,...,N-1$ \\
+$hspace{1cm}$ Für $j = 1,...,N-1$
 \begin{equation}
 u^{k}_{i,j} =   \frac {1} {4} (u^{k}_{i-1,j} + u^{k}_{i+1,j} + u^{k}_{i,j-1} + u^{k}_{i,j+1} - h^{2}f(x_{i},y_{j}))
 \end{equation}
-Wie nun zu sehen ist, beträgt der Rechenaufwand pro Iterationsschritt lediglich $\mathcal{O}((N-1) \cdot (N-1)) = \mathcal{O}(n)$ Schritte für die Poisson-Gleichung. Zudem ist zu erwähnen, dass einige der $u_{i,j}$ Informationen über den Rand enthalten, die ja aus der Voraussetzung bekannt sind.
+
+Der Rechenaufwand beträgt nun pro Iterationsschritt lediglich $\mathcal{O}((N-1) \cdot (N-1)) = \mathcal{O}(n)$ Schritte.
 
 Ein weiteres Verfahren, welches für die diskretisierte Poisson-Gleichung sogar doppelt so schnell konvergiert, als das Jacobi-Verfahren wollen wir nun im nächsten Abschnitt betrachten.
 
 
 \section{Das Gauß-Seidel-Verfahren (Einzelschrittverfahren)}\label{s.Das Gauss-Seidel-Verfahren}
 
-\subsection{Das allgemeine Gauss-Seidel-Iterationsverfahren}
+\subsection{Das allgemeine Gauss-Seidel-Iterationsverfahren}\label{ss.Allgemeines Gauss-Seidel-Verfahren}
 
 Mit der selben Vorschrift und den selben Überlegungen wie oben, wollen wir die Matrix $\mat{A}$ wie folgt zerlegen:
 \begin{equation}
 A = D - L - U
 \end{equation}
-Somit ergibt sich für $\mat{A}u = b$:
+
+Somit ergibt sich für $\mat{A}u = f$:
 \begin{equation}
-Au = b \Leftrightarrow (D-L-U)u = b \Leftrightarrow (D-L)u = Uu + b
+Au = f \Leftrightarrow (D-L-U)u = f \Leftrightarrow (D-L)u = Uu + f
 \end{equation}
+
 Daraus können wir nun folgende Iterationsvorschrift ableiten:
 \begin{equation}
-(D-L)u^{k+1} = Uu^{k} + b \Leftrightarrow u^{k+1} = (D-L)^{-1}Uu^{k} + (D-L)^{-1}b
+(D-L)u^{k+1} = Uu^{k} + f \Leftrightarrow u^{k+1} = (D-L)^{-1}Uu^{k} + (D-L)^{-1}f
 \end{equation}
+
 Dies nun in Komponentenschreibweise für $i=1,...,n$:
 \begin{equation}
-\sum\limits_{j=1}^{i} a_{ij}u_{j}^{k+1} = -\sum\limits_{j=i+1}^{n} a_{ij}u_{j}^{k} + b_{i}\label{eq.GaussSeidel}
+\sum\limits_{j=1}^{i} a_{ij}u_{j}^{k+1} = -\sum\limits_{j=i+1}^{n} a_{ij}u_{j}^{k} + f_{i}\label{eq.GaussSeidel}
 \end{equation}
+
 Formt man \autoref{eq.GaussSeidel} um, so erhält man den Algorithmus des Gauss-Seidel-Verfahrens mit Startvektor $u^{0} \in \mathbb{R}$: \\
+
 Für $k = 1,2,...$ berechne für $i = 1,...,n$
 \begin{eqnarray}
-u_{i}^{k+1} &=& \frac {1} {a_{ii}} (b_{i} - \sum\limits_{j=1}^{i-1} a_{ij}u_{j}^{k+1} - \sum\limits_{j=i+1}^{n} a_{ij}u_{j}^{k})
+u_{i}^{k+1} &=& \frac {1} {a_{ii}} (f_{i} - \sum\limits_{j=1}^{i-1} a_{ij}u_{j}^{k+1} - \sum\limits_{j=i+1}^{n} a_{ij}u_{j}^{k})
 \end{eqnarray}
-Wie zu sehen ist, verwendet dieser Algorithmus dieses mal nicht nur die Werte aus dem vorigen Iterationsschritt, sondern auch welche aus dem der gerade berechnet wird. Jedoch sind dies bereits neu berechnete Werte und werde in diesem Iterationsschritt nicht mehr geändert.Das Gauss-Seidel-Verfahren wartet ebenfalls mit einem Rechaufwand von $\mathcal{O}(n^{2})$ auf. Wie beim Jacobi-Verfahren kann man dies auf $\mathcal{O}(n)$ optimieren.
 
-\subsection{Das Gauss-Seidel-Iterationsverfahren für die Poisson-Gleichung}
+Wie zu sehen ist, verwendet dieser Algorithmus dieses mal nicht nur die Werte aus dem vorigen Iterationsschritt, sondern auch welche aus dem der gerade berechnet wird. Das Gauss-Seidel-Verfahren wartet ebenfalls mit einem Rechaufwand von $\mathcal{O}(n^{2})$ auf. Wie beim Jacobi-Verfahren kann man dies auf $\mathcal{O}(n)$ optimieren.
 
-Um nun eine angepasste Formel bzw. Iterationsvorschrift zu erhalten gehen wir wieder mit Hilfe des 5-Punkt-Differenzensterns vor. Allerdings verwendet wie oben beschrieben der Algorithmus auch Werte, die im aktuellen Iterationsschritt berechnet wurden. Um dies zu gewährleisten müssen wir uns nur \autoref{img.gridWithNumbers} ansehen. Hierbei ist ersichtlich, dass $u_{i-1,j}$ und $u_{i,j-1}$ bereits neu berechnet wurde. $u_{i+1,j}$ und $u_{i,j+1}$ stammen noch aus dem vorigen Iterationsschritt.
+\subsection{Das Gauss-Seidel-Iterationsverfahren für die Poisson-Gleichung}\label{ss.Gauss-Seidel-Verfahren der Poisson Gleichung}
+
+Um nun eine angepasste Formel bzw. Iterationsvorschrift zu erhalten gehen wir wieder mit Hilfe des 5-Punkt-Differenzensterns vor. Allerdings verwendet wie oben beschrieben der Algorithmus auch Werte, die im aktuellen Iterationsschritt berechnet wurden. Um dies zu gewährleisten müssen wir uns nur \autoref{img.gridWithNumbers} ansehen. Hierbei ist ersichtlich, dass $u_{i-1,j}$ und $u_{i,j-1}$ bereits neu berechnet wurden. $u_{i+1,j}$ und $u_{i,j+1}$ stammen noch aus dem vorigen Iterationsschritt.
 
 Daraus ergibt sich der spezielle Gauss-Seidel-Algorithmus für die Poisson-Gleichung:
 \begin{equation}
@@ -317,45 +347,73 @@ Auch hier reduziert sich der Rechenaufwand auf $\mathcal{O}(n)$.
 
 
 \section{Warum Einzelschritt- und Gesamtschrittverfahren?}\label{s.Warum Einzelschritt- und Gesamtschrittverfahren?}
-Zum lösen von großen linearen Gleichungssystemen werden das Jacobi-Verfahren und das Gauss-Seidel-Verfahren heute kaum mehr verwendet. Es gibt mittlerweile schnellere, stabilere und effizientere Verfahren wie wir im fortlaufenden sehen werden. Einen großen Vorteil haben allerdings beide Verfahren: Sie löschen große Fehler zu Beginn der Iteration aus bzw. reduzieren diese stark. Darum finden sie besonders große Verwendung in den Mehrgittermethoden, die wir später kennen lernen werden.
+Zum lösen von großen linearen Gleichungssystemen werden das Jacobi-Verfahren und das Gauss-Seidel-Verfahren heute kaum mehr verwendet. Es gibt mittlerweile schnellere, stabilere und effizientere Verfahren wie wir im fortlaufenden sehen werden. Einen großen Vorteil haben allerdings beide Verfahren: Sie löschen große Fehler bereits nach den ersten Iterationsschritten aus. Darum finden sie besonders große Verwendung in den Mehrgittermethoden, die wir später kennen lernen werden.
+
+\section{Die SOR-Methode (SOR = successive overrelaxation)}\label{s.SOR-Methode}
+
+Eine Optimierung von \autoref{eq.GaussSeidel} bietet das SOR-Verfahren oder auch Gauss-Seidel-Relaxationsverfahren. Die Einführung eines Relaxationsparameters $\omega$ kann in einigen Fällen das Iterationsverfahren effizienter machen. Speziell für die Poisson-Gleichung wird nicht nur die Effizienz signifikant verbessert, es ist auch ein optimaler Parameter $\omega$ bekannt (siehe hierzu Dahmen/Reusken).
+
+\subsection{Algorithmus des SOR-Verfahrens}\label{ss.Algorithmus des SOR-Verfahrens}
+
+Für $k = 1,2,...$ berechne für $i = 1,...,n$
+\begin{eqnarray}
+u_{i}^{k+1} &=& u_{i}^{k} - \frac {\omega} {a_{ii}} (f_{i} - \sum\limits_{j=1}^{i-1} a_{ij}u_{j}^{k+1} - \sum\limits_{j=i}^{n} a_{ij}u_{j}^{k}) \\
+&=& (1-\omega)u_{i}^{k} - \frac {\omega} {a_{ii}} (f_{i} - \sum\limits_{j=1}^{i-1} a_{ij}u_{j}^{k+1} - \sum\limits_{j=i+1}^{n} a_{ij}u_{j}^{k})
+\end{eqnarray}
+
+Offensichtlich erhält man für $\omega = 1$ wieder das Gauss-Seidel-Verfahren. Außerdem existiert, wie bereits erwähnt, nicht immer ein $\omega$, welches das Verfahren schneller konvergieren lässt. Da für die Poisson Gleichung sogar ein optimaler Parameter existiert, wollen wir uns diesen näher ansehen.
+
+\subsection{Satz (Optimaler Parameter $\omega$)}\label{ss.optimales omega}
+
+Sei $\mu := cos(\pi h)$. Für die diskretisierte Poisson Gleichung $Au = f$ gilt dann für den Relaxationsparameter:
+
+\begin{equation}
+\omega_{opt} := 1 + \left \frac {\mu} {1 + \sqrt{1 - \mu^{2}}} \right
+\end{equation}
+
+Verlgeichen Sie hierzu auch Dahmen/Reusken (Seite 564).
+
+\subsection{SOR in Matrix-Darstellung}\label{ss.Matrixdarstellung}
+
+Der Vollständigkeit halber, wollen wir uns jetzt noch der Matrix-Darstellung der SOR-Methode widmen. Im wesentlichen entspricht sie dem Gauss-Seidel-Verfahren. Lediglich der Relaxationsparameter muss eingebaut werden. Man erhält:
+
+\begin{eqnarray}
+(\mat{Id}+\omega\mat{D}^{-1}\mat{L})x^{k+1} &=& [(1-\omega)\mat{I}-\omega\mat{D}^{-1}\mat{R}]x^{k} + \omega\mat{D}^{-1}b \notag \\
+\Longleftrightarrow \mat{D}^{-1}(\mat{D}+\omega\mat{L})x^{k+1} &=& \mat{D}^{-1}[(1-\omega)\mat{D}-\omega\mat{R}]x^{k} + \omega\mat{D}^{-1}b \notag \\
+\end{eqnarray}
+
+dies ergibt
+
+\begin{equation}
+x^{k+1} = (\mat{D}+\omega\mat{L})^{-1}[(1-\omega)\mat{D}-\omega\mat{R}]x^{k}+\omega(\mat{D}+\omega\mat{L})^{-1}b
+\end{equation}
+
+Mit dieser Gleichung und einigen weiteren Überlegungen kann gezeigt werden, dass folgender Satz gilt.
+
+\subsection{Satz}\label{ss.konvergenz für omega}
+
+Sei $\mat{A}$ hermitesch und positiv definit, dann konvergiert das Gauß-Seidel-Relaxationsverfahren genau dann, wenn $\omega \in (0,2)$ ist. (aus oranges buch) \\ \\
+
+Einen Beweis hierzu findet man beispielsweise in (oranges buch) \\ \\
+
+Aus \autoref{ss.optimales omega} ist der optimale Paramater für die Poisson Gleichung bereits bekannt. Also konvergiert - wie erwartet - das Verfahren für $\omega = $.
 
 \section{Das Verfahren der konjugierten Gradienten}\label{s.Das Verfahren der konjugierten Gradienten}
 
-Das Verfahren der konjugierten Gradienten wurde 1952 von Heestens und Stiefel erstmals vorgestellt und erfreut sich großer Beliebtheit. Diese rührt daher, da das Verfahren eine sehr schnelle Konvergenz hat und numerisch äußerst stabil ist. \\
-Das Verfahren der konjugierten Gradienten (oder CG-Verfahren) ist eine Krylov-Unterraum-Methode und gehört zu den Projektionsverfahren. Krylovräume sind, wie wir sehen werden, (Unter-)Räume die durch eine Matrizen und Residuenvektoren aufgespannt werden. Innerhalb dieser Räume wird ein orthogonaler Vektor gesucht, auf den Krylovraum projeziert und anschließend orthonormalisiert. Den Unterschied - nicht nur in der Konvergenzgeschwindigkeit - zum Gradientenabstiegsverfahren machen beim CG-Verfahren die konjugierten Richtungen. Sie kommen durch spezielle - A-orthogonale - Projektionen zu stande. Um dies nun mathematisch sauber zu formulieren, definieren wir zunächst, was A-orthogonal oder auch konjugiert heißt: 
+Das Verfahren der konjugierten Gradienten wurde 1952 von Heestens und Stiefel erstmals vorgestellt. Das Verfahren zeichnet sich durch Stabilität und schnelle Konvergenz aus. \\
+Das Verfahren der konjugierten Gradienten (auch CG-Verfahren) ist eine Krylov-Unterraum-Methode und gehört zu den Projektionsverfahren. Charakterisitisch für das CG-Verfahren ist außerdem die A-Orthogonalität der Basen des Krylovraums. Die Orthogonalität hängt also von der zugrunde liegenden Matrix $\mat{A}$ ab. Aus diesem Grund müssen wir zunächst definieren, was A-orthogonal heißt.
 
-%1.2. Definition (A-orthogonal)
-\subsection{Definition (A-orthogonal)}
+\subsection{Definition (A-orthogonal)}\label{ss.A-orthogonal}
 Sei $\mat{A}$ eine symmetrische, nicht singuläre Matrix. Zwei Vektoren $x,y \in \mathbb{R}^{n}$ heißen \underline{\textbf{konjugiert}} oder \underline{\textbf{A-orthogonal}}, wenn $x^{T}Ay = 0$ gilt.
 
-\subsubsection{Bemerkung:}
+\subsubsection{Bemerkung:}\label{sss.Bemerkung zu A-orthogonal}
+
 \begin{itemize}
 \item Es definiert $\langle x,y \rangle _{A} = x^{T}Ay$ ein Skalarprodukt auf dem $\mathbb{R}^{n}$ für $\mat{A}$ s.p.d.
 \item Wir nennen $\|x\|_{A} := \sqrt{\langle x, x \rangle _{A}}$ die Energie-Norm.
 \end{itemize}
 
-Wozu die A-Orthogonalität dient, wird uns der nächste Satz zeigen:
-
-%1.3.Satz
-\subsection{Satz - Minimierungsfunktion}
-Sei $\mat{A}\in\mathbb{R}^{n \times n}$ s.p.d. und
-\begin{equation}\label{eq.Minimierungsfunktion}
-f(x) := \frac 1 2 x^{T}\mat{A}x - b^{T}x,
-\end{equation}
-wobei $b,x \in \mathbb{R}^{n}$. Dann gilt:
-\begin{center}
-f hat ein eindeutig bestimmtes Minimum und
-\end{center}
-\begin{equation}
-Ax^{*} = b \Longleftrightarrow f(x^{*}) = \underset{x\in\mathbb{R}^{n}}{\min} f(x)
-\end{equation}
-
-Beweis siehe z.B. Dahmen/Reusken... \\ \\
-
-Bei der Minimierung der Funktion \autoref{eq.Minimierungsfunktion} werden beim Gradientenverfahren die Richtungen des steilsten Abstiegs gesucht. Im CG-Verfahren geschieht im wesentlichen das Gleiche, allerdings bewirkt die Matrix $\mat{A}$, dass wir unser Ziel - das Miniumum der Funktion - schneller erreichen. \\
-Illustriert wird dies durch Bild (bla). Hier ist gut zu sehen, dass beim Gradientenverfahren die Höhenlinien auf elliptischen Bahnen liegen. Durch die Matrix A, also die A-Orthogonalität, werden die Ellipsen gestaucht zu Kreisen. \\
-
-Folgendes Lemma wird illustrieren, wie wir uns diese neu gewonne Erkenntnis nun zu Nutze machen werden.
+Nun wollen wir noch den Projektionssatz in Abhängigkeit unserer Matrix $\mat{A}$ definieren.
 
 %1.4.Lemma
 \subsection{Lemma - (A-orthogonaler) Projektionssatz}\label{s.Projektionssatz}
@@ -372,7 +430,8 @@ genau dann, wenn $u^{k}$ die $\textit{A-orthogonale Projektion}$ von $v$ auf $U_
 P_{U_{k,\langle \cdot,\cdot \rangle}}(v) = \textbf{u}^{k} = \sum_{j=0}^{k-1} \frac {\langle v, p^{j} \rangle _{A}} {\langle p^{j}, p^{j} \rangle _{A}} p^{j}
 \end{equation}
 
-Der Beweis zu diesem Lemma folgt direkt aus dem Projektionssatz. Man sucht einen Vektor $v$ in $U_{k+1}$. Man wählt nun ein beliebiges $v \in U_{k+1}$ und minimiert über alle $u^{k} \in U_{k}$. Die optimale Lösung ist dann der gesucht Vektor $v$. Hier wird in die Minimierungsfunkton jedoch noch die Matrix $\mat{A}$ hinzugenommen. \\
+Der Beweis zu diesem Lemma folgt direkt aus dem Projektionssatz. \\
+Was dieser Satz nun aussagt ist, dass man einen Vektor $v$ in $U_{k+1}$ sucht. Nun wählen wir ein beliebiges $v \in U_{k+1}$ und minimiert über alle $u^{k} \in U_{k}$. Die optimale Lösung ist dann der gesucht Vektor $v$.
 Bildlich gesprochen, ist $v$ die (A-)orthogonale Projektion auf $U_{k}$. Vergleiche Bild (bla). \\ \\
 
 Da wir nun die Grundlagen für das CG-Verfahren geschaffen haben, wollen wir nun den Algorithmus betrachten.
@@ -458,26 +517,6 @@ Zu lösen: $\mat{A}x^{*} = b$.
 \\$= b - A(x^{0} - \tilde x^{k}) = b - Ax^{k} = r^{k}$
 \\$\Longrightarrow \tilde r^{k} = r^{k}$
 
-%1.10. Zusammenhang zu Krylovräumen
-\subsection{Lemma (Zusammenhang zu Krylovräumen)}
-Man kann $U_{k}$ auch in folgender Form schreiben:
-\begin{equation}
-U_{k} := span\{r^{0}, r^{1},...,r^{k-1}\} = span\{p^{0},p^{1},...,p^{k-1}\} = span\{r^{0}, Ar^{0},...,A^{k-1}r^{0}\}
-\end{equation}
-
-\subsubsection{Beweis:}
-Per Induktion über k (klar für k=0):
-\\Induktionsvoraussetzung:
-\begin{align*}
-& U_{k} := span\{r^{0}, r^{1},...,r^{k-1}\} = span\{p^{0},p^{1},...,p^{k-1}\} = span\{r^{0}, Ar^{0},...,A^{k-1}r^{0}\}\\
-& \Longrightarrow k \longrightarrow k+1: U_{k+1}\\
-& r^{k} = r^{k-1} - \alpha_{k-1} Ap^{k-1}\\
-& p^{k-1} \in U_{k} = span\{r^{0},...,A^{k-1}r^{0}\}\\
-& da \hspace{2mm} p^{k-1} = (\sum_{i=0}^{k-1} \sigma_{i}A^{i})r^{0}\\
-& \Longrightarrow Ap^{k-1} = (\sum_{i=0}^{k-1} \sigma_{i}A^{i+1})r^{0}\\
-& = \sigma_{0}Ar^{0} + ... + \sigma_{k-1}A^{k}r^{0}\\
-& \Longrightarrow r_{k} \in U_{k+1}
-\end{align*}
 
 \chapter{Mehrgitterverfahren}\label{c.Mehrgitterverfahren}
 
